<resources>
    <string name="app_name">TTT-TIC_TAC_TOE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Tic Tac Toe</string>

    <string name="play">PLAY</string>
    <string name="players">ENTER PLAYERS</string>
    <string name="match_history">MATCH HISTORY</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_player__set">Player_SetActivity</string>

    <string name="p1">PLAYER 1</string>
    <string name="p2">PLAYER 2</string>

    <string name="save">SAVE</string>

    <string name="reset">RESET</string>
    <string name="winner">WHO WON?</string>

    <string name="hist">Game History</string>

    <string name="gam1"></string>
    <string name="gam2"></string>
    <string name="gam3"></string>
    <string name="gam4"></string>
    <string name="gam5"></string>

    <string name="p">ENTER PLAYER NAMES</string>

    <string name="title_activity_game_">Game_Activity</string>
    <string name="title_activity_playersetactivity">playersetactivity</string>
    <string name="title_activity_history_">History_Activity</string>
    <string name="title_activity_histactivity">histactivity</string>
    <string name="Refresher">REFRESH</string>
</resources>
