<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myriad.ttt_tic_tac_toe.histactivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hist"
        android:id="@+id/ttl"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/g1"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gam1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/g2"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gam2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/g3"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gam3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/g4"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gam4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/g5"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/gam5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REFRESH"
        android:id="@+id/refresh"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttons"
        android:padding="3dp" />
</LinearLayout>
