<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/Container_Main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:weightSum="4"
        android:id="@+id/Margin_Container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/title"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonContainer">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:id="@+id/player_set_button"
                android:layout_gravity="center_horizontal"
                android:background="@color/buttons"
                android:layout_margin="2dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/play_button"
                android:layout_gravity="center_horizontal"
                android:background="@color/buttons"
                android:layout_margin="2dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_history"
                android:id="@+id/hist_button"
                android:layout_gravity="center_horizontal"
                android:background="@color/buttons"
                android:layout_margin="2dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
